--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,11 +8,22 @@
   <header>
     <h1>{{ .Title }}</h1>
   </header>
+  <p>{{ .Dir }} {{ .Date }} {{ .ReadingTime }} min</p>
+  <div class="homepage-content">
+    <!-- Note that the content for index.html, as a sort of list page, will pull from content/_index.md -->
+    {{.Content}}
+  </div>
+  <div>
+    <!-- Note that .Data.Pages is the equivalent of .Site.Pages on the homepage template. -->
+    {{ range first 10 .Data.Pages }}
+        {{ .Render "summary"}}
+    {{ end }}
+  </div>
   {{ range (.Paginate (where .Data.Pages "Type" "post")).Pages }}
     {{ partial "page-summary.html" . }}
   {{ end }}
 {{ end }}
 {{ define "footer" }}
-  {{ partial "pagination.html" . }}
+<!--  {{ partial "pagination.html" . }} -->
   {{ partial "powered-by.html" . }}
 {{ end }}
