Added analytics partial adjusted powered by

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -25,5 +25,6 @@
 {{ end }}
 {{ define "footer" }}
 <!--  {{ partial "pagination.html" . }} -->
-  {{ partial "powered-by.html" . }}
+{{ partial "powered-by.html" . }}
+{{ partial "analytics.html" . }}
 {{ end }}
