--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -13,4 +13,5 @@
 {{ define "footer" }}
   {{ partial "pagination.html" . }}
   {{ partial "powered-by.html" . }}
+  {{ partial "analytics.html" . }}
 {{ end }}
