--- a/layouts/partials/powered-by.html
+++ b/layouts/partials/powered-by.html
@@ -1,6 +1,6 @@
 {{ if ne .Site.Params.powered_by false }}
   <p class="muted">
-    This page was generated using
+    This page was generated using a fork of
     <a target="_blank" rel="noopener" href="https://comfusion.github.io/after-dark/">After Dark</a>
     for
     <a target="_blank" rel="noopener" href="https://gohugo.io/">Hugo</a>.
